--- a/EncarAlquiler/app/views/habitaciones/index.html.erb
+++ b/EncarAlquiler/app/views/habitaciones/index.html.erb
@@ -1,6 +1,5 @@
 <div class="col-md-10 col-md-offset-1">
-  <p id="notice"><%= notice %></p>
-    <h1 class="text-center text-uppercase espacio">
+    <h1 class="text-center text-uppercase">
       Habitaciones
           <%= link_to glyph(:plus), new_habitacion_path, class: 'btn btn-primary btn-sm' %>
     </h1>
