--- a/EncarAlquiler/app/views/habitaciones/show.html.erb
+++ b/EncarAlquiler/app/views/habitaciones/show.html.erb
@@ -1,11 +1,9 @@
-<h1 class="container text-center text-uppercase espacio">
+<h1 class="container text-center text-uppercase">
   Habitacion
   <th>
     <%= link_to glyph(:plus), new_habitacion_path, class: 'btn btn-primary btn-sm' %>
   </th>
 </h1>
-<p id="notice"><%= notice %></p>
-
 <div class="col-md-10 col-md-offset-1">
   <div class="table-responsive">
     <table class="table table-bordered table-hover">
