--- a/EncarAlquiler/app/views/locatarios/new.html.erb
+++ b/EncarAlquiler/app/views/locatarios/new.html.erb
@@ -1,3 +1,3 @@
-<h1 class="text-center text-uppercase espacio">Nuevo locatario</h1>
+<h1 class="text-center text-uppercase">Nuevo locatario</h1>
 <%= render 'form' %>
 
