--- a/EncarAlquiler/app/views/locatarios/show.html.erb
+++ b/EncarAlquiler/app/views/locatarios/show.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-center text-uppercase container espacio">
+<h1 class="text-center text-uppercase container">
   Locatarios
   <th>
       <%= link_to  glyph(:plus), new_locatario_path, class: 'btn btn-primary btn-sm' %>
