--- a/EncarAlquiler/app/views/pagos/show.html.erb
+++ b/EncarAlquiler/app/views/pagos/show.html.erb
@@ -1,4 +1,4 @@
-<h1 class="container text-center text-uppercase espacio">
+<h1 class="container text-center text-uppercase">
   Pago
   <th>
     <%= link_to glyph(:plus), new_pago_path, class: 'btn btn-primary btn-sm' %>
