--- a/EncarAlquiler/app/views/reservas/edit.html.erb
+++ b/EncarAlquiler/app/views/reservas/edit.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-center text-uppercase espacio">Editar Reserva</h1>
+<h1 class="text-center text-uppercase">Editar Reserva</h1>
 <%= render 'form' %>
 <!--
 <%= link_to glyph(:remove), @reserva, class: 'btn btn-default btn-sm'  %>
