--- a/EncarAlquiler/app/views/reservas/index.html.erb
+++ b/EncarAlquiler/app/views/reservas/index.html.erb
@@ -1,6 +1,6 @@
 <div class="col-md-10 col-md-offset-1">
   <p id="notice"><%= notice %></p>
-    <h1 class="text-center text-uppercase espacio">
+    <h1 class="text-center text-uppercase">
       Reservas realizadas
         <%= link_to glyph(:plus), new_reserva_path, class: 'btn btn-primary btn-sm' %>
     </h1>
