--- a/EncarAlquiler/app/views/tipos/new.html.erb
+++ b/EncarAlquiler/app/views/tipos/new.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-center text-uppercase espacio">Nuevo tipo de habitacion</h1>
+<h1 class="text-center text-uppercase">Nuevo tipo de habitacion</h1>
 <%= render 'form' %>
 
 
