--- a/EncarAlquiler/app/views/layouts/paginas.html.erb
+++ b/EncarAlquiler/app/views/layouts/paginas.html.erb
@@ -5,13 +5,13 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-  
+ <!-- 
  <style>
 .espacio{
-	padding-top: 70px;
+	padding-top: 40px;
 }  
  </style>
-
+-->
 
 </head>
 
@@ -19,7 +19,7 @@
 <!--/////////////////////////////////////////////////////////////////////////////////////////-->
 <header>
   
-  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <nav class="navbar navbar-default navbar-static-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -65,6 +65,18 @@
 <!--/////////////////////////////////////////////////////////////////////////////////////////-->
 
 <body>
+  <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <% if notice %>
+                    <%= bootstrap_flash %> 
+                    <% end %>
+                    <% if alert %>
+                    <%= bootstrap_flash %> 
+                    <% end %>
+                </div>
+            </div>
+        </div>
 	<%= yield %>
   
 </body>
