--- a/EncarAlquiler/app/views/locatarios/_form.html.erb
+++ b/EncarAlquiler/app/views/locatarios/_form.html.erb
@@ -1,7 +1,10 @@
 <%= form_for(@locatario) do |f| %>
+  <div class="container">
+  <div class="col-md-12">
   <% if @locatario.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@locatario.errors.count, "error") %> prohibited this usuario from being saved:</h2>
+    <div  class="alert alert-dismissible alert-danger">
+      <button type="button" class="close" data-dismiss="alert">×</button>
+      <h2><%= pluralize(@locatario.errors.count, "error") %> complete los datos antes de guardar:</h2>
       <ul>
       <% @locatario.errors.full_messages.each do |message| %>
         <li><%= message %></li>
@@ -9,6 +12,8 @@
       </ul>
     </div>
   <% end %>
+  </div>
+  </div>
   <div class="container">
   <div class="col-md-12">
   <div class="table-responsive">
@@ -16,19 +21,19 @@
       <thead>
         <tr class="info">
           <th class="text-center">
-            <%= f.label :nombre %><br>
+            <%= f.label :nombre %>
           </th>
           <th class="text-center">
-            <%= f.label :apellido %><br>
+            <%= f.label :apellido %>
           </th>
           <th class="text-center">
-            <%= f.label :ci %><br>
+            <%= f.label :ci %>
           </th>
           <th class="text-center">
-            <%= f.label :telefono %><br>
+            <%= f.label :telefono %>
           </th>
           <th class="text-center">
-            <%= f.label :email %><br>
+            <%= f.label :email %>
           </th>
           
           <!--ACCIONES-->
