--- a/EncarAlquiler/app/views/locatarios/index.html.erb
+++ b/EncarAlquiler/app/views/locatarios/index.html.erb
@@ -1,9 +1,7 @@
-<div class="container espacio">
+<div class="container">
   <h1 class="text-center text-uppercase">
     Locatarios
-    
       <%= link_to  glyph(:plus), new_locatario_path, class: 'btn btn-primary btn-sm' %>
-    
   </h1>
   
     <div class="table">
