--- a/EncarAlquiler/app/views/pagos/_form.html.erb
+++ b/EncarAlquiler/app/views/pagos/_form.html.erb
@@ -1,8 +1,10 @@
 <%= form_for(@pago) do |f| %>
+  <div class="container">
+  <div class="col-md-12">
   <% if @pago.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@pago.errors.count, "error") %> prohibited this pago from being saved:</h2>
-
+    <div  class="alert alert-dismissible alert-danger">
+      <button type="button" class="close" data-dismiss="alert">×</button>
+      <h2><%= pluralize(@pago.errors.count, "error") %> complete los datos antes de guardar:</h2>
       <ul>
       <% @pago.errors.full_messages.each do |message| %>
         <li><%= message %></li>
@@ -10,6 +12,8 @@
       </ul>
     </div>
   <% end %>
+  </div>
+  </div>
   <div class="container">
     <div class="col-md-2">
     </div>
