--- a/EncarAlquiler/app/views/pagos/edit.html.erb
+++ b/EncarAlquiler/app/views/pagos/edit.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-center text-uppercase espacio container">Editar Pago</h1>
+<h1 class="text-center text-uppercase container">Editar Pago</h1>
 <%= render 'form' %>
 
 
