--- a/EncarAlquiler/app/views/pagos/index.html.erb
+++ b/EncarAlquiler/app/views/pagos/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container espacio">
+<div class="container">
   <h1 class="text-center text-uppercase">
       Pagos
       <%= link_to  glyph(:plus), new_pago_path, class: 'btn btn-primary btn-sm' %>
