--- a/EncarAlquiler/app/views/principal/index.html.erb
+++ b/EncarAlquiler/app/views/principal/index.html.erb
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-<div style="padding-top: 40px">
+<div>
 	<div class="page-header" >
 	  <h4 class="text-center">Bienvenidos a Encarnacion Alquiler 
 	  	<small>Sistema de reserva de Habitaciones</small>
