--- a/EncarAlquiler/app/views/reservas/new.html.erb
+++ b/EncarAlquiler/app/views/reservas/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container espacio">
+<div class="container">
     <div class="row">
         <div class="col-lg-12">
 <h1 class="text-center">Nueva Reserva</h1>
