--- a/EncarAlquiler/app/views/tipos/_form.html.erb
+++ b/EncarAlquiler/app/views/tipos/_form.html.erb
@@ -1,8 +1,9 @@
-<%= form_for(@tipo) do |f| %>
+<%= form_for(@tipo) do |f| %> <div class="container">
+  <div class="col-md-12">
   <% if @tipo.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@tipo.errors.count, "error") %> Complete los datos antes de guardar:</h2>
-
+    <div  class="alert alert-dismissible alert-danger">
+      <button type="button" class="close" data-dismiss="alert">×</button>
+      <h2><%= pluralize(@tipo.errors.count, "error") %> complete los datos antes de guardar:</h2>
       <ul>
       <% @tipo.errors.full_messages.each do |message| %>
         <li><%= message %></li>
@@ -10,13 +11,15 @@
       </ul>
     </div>
   <% end %>
+  </div>
+  </div>
   <div class="col-md-4 col-md-offset-4">
     <div class="table-responsive">
       <table class="table table-bordered table-hover">
         <thead>
           <tr class="info">
             <th class="text-center">
-              <%= f.label :nombre %><br>
+              <%= f.label :nombre %>
             </th>
             <!--ACCIONES-->
             <th class="text-center">
