--- a/EncarAlquiler/app/views/tipos/edit.html.erb
+++ b/EncarAlquiler/app/views/tipos/edit.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-center text-uppercase container espacio">Editar tipo de habitacion</h1>
+<h1 class="text-center text-uppercase container">Editar tipo de habitacion</h1>
 <%= render 'form' %>
 <div class="col-md-4 col-md-offset-4">
 	<div class="actions">
