--- a/EncarAlquiler/app/views/tipos/show.html.erb
+++ b/EncarAlquiler/app/views/tipos/show.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-center text-uppercase container espacio">
+<h1 class="text-center text-uppercase container">
 	Tipos
 	<th>
       <%= link_to glyph(:plus), new_tipo_path, class: 'btn btn-primary btn-sm' %>
