--- a/EncarAlquiler/app/views/reservas/new.html.erb
+++ b/EncarAlquiler/app/views/reservas/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
-<h1 class="text-center">Nueva Reserva</h1>
+<h1 class="text-center text-uppercase">Nueva Reserva</h1>
 </div>
 <%= render 'form' %>
 <div class="container">
