--- a/EncarAlquiler/app/views/reservas/index.html.erb
+++ b/EncarAlquiler/app/views/reservas/index.html.erb
@@ -1,5 +1,4 @@
 <div class="col-md-10 col-md-offset-1">
-  <p id="notice"><%= notice %></p>
     <h1 class="text-center text-uppercase">
       Reservas realizadas
         <%= link_to glyph(:plus), new_reserva_path, class: 'btn btn-primary btn-sm' %>
@@ -12,6 +11,7 @@
           <tr class="info">
             <th class="text-center">Locatario</th>
             <th class="text-center">Fecha de reserva</th>
+            <th class="text-center">Monto</th>
             <th class="text-center">Acciones</th>
           </tr>
         </thead>
@@ -20,6 +20,7 @@
       <tr class="text-center">
         <td><%= reserva.locatario_id %></td>
         <td><%= reserva.fecha_reserva %></td>
+        <td><%= reserva.monto %></td>
         <td><%= link_to glyph(:eye_open), reserva, class: 'btn btn-info btn-sm' %>
             <%= link_to glyph(:pencil), edit_reserva_path(reserva), class: 'btn btn-warning btn-sm' %>
             <%= link_to glyph(:trash), reserva, method: :delete, data: { confirm: 'Estas seguro?' }, class: 'btn btn-danger btn-sm'  %></td>
