--- a/EncarAlquiler/app/views/reservas_habitaciones/index.html.erb
+++ b/EncarAlquiler/app/views/reservas_habitaciones/index.html.erb
@@ -9,6 +9,7 @@
       <th>Habitacion</th>
       <th>Fecha inicio</th>
       <th>Fecha fin</th>
+      <th>Precio</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,6 +21,7 @@
         <td><%= reserva_habitacion.habitacion_id %></td>
         <td><%= reserva_habitacion.fecha_inicio %></td>
         <td><%= reserva_habitacion.fecha_fin %></td>
+        <td><%= reserva_habitacion.precio %></td>
         <td><%= link_to 'Show', reserva_habitacion %></td>
         <td><%= link_to 'Edit', edit_reserva_habitacion_path(reserva_habitacion) %></td>
         <td><%= link_to 'Destroy', reserva_habitacion, method: :delete, data: { confirm: 'Are you sure?' } %></td>
