--- a/EncarAlquiler/app/views/habitaciones/new.html.erb
+++ b/EncarAlquiler/app/views/habitaciones/new.html.erb
@@ -1,6 +1,7 @@
 <div class="col-md-12">
 	<h1 class="text-center text-uppercase">
 		Nueva Habitacion
+		<%= link_to glyph(:arrow_left), habitaciones_path, class: 'btn btn-info btn-sm text-left' %>
 	</h1>
 </div>
 <%= render 'form' %>
