--- a/EncarAlquiler/app/views/tipos/_form.html.erb
+++ b/EncarAlquiler/app/views/tipos/_form.html.erb
@@ -14,36 +14,29 @@
   </div>
   </div>
   <div class="col-md-4 col-md-offset-4">
-    <div class="table-responsive">
-      <table class="table table-bordered table-hover">
-        <thead>
-          <tr class="info">
-            <th class="text-center">
+    <div class="CSS_Table_Example">
+      <table>
+          <tr>
+            <td>
               <%= f.label :nombre %>
-            </th>
+            </td>
             <!--ACCIONES-->
-            <th class="text-center">
+            <td>
               Acciones
-            </th>
+            </td>
           </tr>
-        </thead>
-        
-        <tbody>
-          <tr class="text-center">
+          <tr>
             <td>
               <%= f.text_field :nombre, class:"form-control input-sm" %>
             </td>
-            <td>
+            <td><center>
               <%= button_tag(type: 'submit', class: "btn btn-success btn-sm") do %>
               <span class="glyphicon glyphicon-floppy-disk"></span>
               <% end %>
               <%= link_to glyph(:remove), @tipo,  class: 'btn btn-danger btn-sm' %>
-              <%= link_to glyph(:arrow_left), tipos_path,  class: 'btn btn-info btn-sm' %>
-
-              
+              </center>
             </td>
           </tr>
-        </tbody>
       </table>
     </div>
   </div>
