--- a/EncarAlquiler/app/assets/stylesheets/twitter-bootstrap-static/bootstrap.css.erb
+++ b/EncarAlquiler/app/assets/stylesheets/twitter-bootstrap-static/bootstrap.css.erb
@@ -6999,3 +6999,86 @@ button.close {
 .panel-primary .panel-title {
   color: #fff;
 }
+.CSS_Table_Example {
+  margin:0px;padding:0px;
+  width:100%;
+  box-shadow: 10px 10px 5px #888888;
+  border:1px solid #000000;
+  -moz-border-radius-bottomleft:9px;
+  -webkit-border-bottom-left-radius:9px;
+  border-bottom-left-radius:9px;
+  -moz-border-radius-bottomright:9px;
+  -webkit-border-bottom-right-radius:9px;
+  border-bottom-right-radius:9px;
+  -moz-border-radius-topright:9px;
+  -webkit-border-top-right-radius:9px;
+  border-top-right-radius:9px;
+  -moz-border-radius-topleft:9px;
+  -webkit-border-top-left-radius:9px;
+  border-top-left-radius:9px;
+}.CSS_Table_Example table{
+  width:100%;
+  height:100%;
+  margin:0px;padding:0px;
+}.CSS_Table_Example tr:last-child td:last-child {
+  -moz-border-radius-bottomright:9px;
+  -webkit-border-bottom-right-radius:9px;
+  border-bottom-right-radius:9px;
+}.CSS_Table_Example table tr:first-child td:first-child {
+  -moz-border-radius-topleft:9px;
+  -webkit-border-top-left-radius:9px;
+  border-top-left-radius:9px;
+}.CSS_Table_Example table tr:first-child td:last-child {
+  -moz-border-radius-topright:9px;
+  -webkit-border-top-right-radius:9px;
+  border-top-right-radius:9px;
+}.CSS_Table_Example tr:last-child td:first-child{
+  -moz-border-radius-bottomleft:9px;
+  -webkit-border-bottom-left-radius:9px;
+  border-bottom-left-radius:9px;
+}.CSS_Table_Example tr:hover td{
+  background-color:#bfdfff;
+  background:-o-linear-gradient(bottom, #bfdfff 5%, #c2dffc 100%);  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #bfdfff), color-stop(1, #56aaff) );
+  background:-moz-linear-gradient( center top, #bfdfff 5%, #c2dffc 100% );
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#bfdfff", endColorstr="#c2dffc");  background: -o-linear-gradient(top,#bfdfff,c2dffc);
+}.CSS_Table_Example tr:first-child td{
+  background:-o-linear-gradient(bottom, #0069d3 5%, #007fff 100%);  background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #0069d3), color-stop(1, #007fff) );
+  background:-moz-linear-gradient( center top, #0069d3 5%, #007fff 100% );
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#0069d3", endColorstr="#007fff");  background: -o-linear-gradient(top,#0069d3,007fff);
+  background-color:#0069d3;
+  border:0px solid #000000;
+  text-align:center;
+  border-width:0px 0px 1px 1px;
+  font-size:18px;
+  font-family:Comic Sans MS;
+  font-weight:bold;
+  color:#ffffff;
+}.CSSTableGenerator tr:first-child:hover td{
+  background:-o-linear-gradient(bottom, #0069d3 5%, #007fff 100%);  background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #0069d3), color-stop(1, #007fff) );
+  background:-moz-linear-gradient( center top, #0069d3 5%, #007fff 100% );
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#0069d3", endColorstr="#007fff");  background: -o-linear-gradient(top,#0069d3,007fff);
+  background-color:#0069d3;
+}.CSS_Table_Example tr:first-child td:first-child{
+  border-width:0px 0px 1px 0px;
+}.CSS_Table_Example tr:first-child td:last-child{
+  border-width:0px 0px 1px 1px;
+}.CSS_Table_Example td{
+  background:-o-linear-gradient(bottom, #c2dffc 5%, #bfdfff 100%);  background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #c2dffc), color-stop(1, #bfdfff) ); 
+  background:-moz-linear-gradient( center top, #c2dffc 5%, #bfdfff 100% );
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#c2dffc", endColorstr="#bfdfff");  background: -o-linear-gradient(top,#c2dffc,bfdfff);
+  background-color:#c2dffc;
+  border:1px solid #000000;
+  border-width:0px 1px 1px 0px;
+  text-align:left;
+  padding:7px;
+  font-size:12px;
+  font-family:Verdana;
+  font-weight:bold;
+  color:#000000;
+}.CSS_Table_Example tr:last-child td{
+  border-width:0px 1px 0px 0px;
+}.CSS_Table_Example tr td:last-child{
+  border-width:0px 0px 1px 0px;
+}.CSS_Table_Example tr:last-child td:last-child{
+  border-width:0px 0px 0px 0px;
+}
