--- a/EncarAlquiler/app/views/habitaciones/edit.html.erb
+++ b/EncarAlquiler/app/views/habitaciones/edit.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-center text-uppercase">Editar Habitacion</h1>
+<h1 class="text-center text-uppercase">Editar Habitacion<%= link_to glyph(:arrow_left), habitaciones_path, class: 'btn btn-primary btn-sm' %>
+</h1>
 <%= render 'form' %>
 
-<!--<%= link_to glyph(:arrow_left), habitaciones_path, class: 'btn btn-primary btn-sm' %>-->
