--- a/EncarAlquiler/app/views/habitaciones/index.html.erb
+++ b/EncarAlquiler/app/views/habitaciones/index.html.erb
@@ -5,34 +5,30 @@
     </h1>
 </div>
 <div class="col-md-10 col-md-offset-1">
-  <div class="table-responsive">
-    <table class="table table-bordered table-hover">
-      <thead>
-        <tr class="info">
-          <th class="text-center">Nombre</th>
-          <th class="text-center">Tipo</th>
-          <th class="text-center">Descripcion</th>
-          <th class="text-center">Precio</th>
-          <th class="text-center">Estado</th>
-          <th class="text-center">Acciones</th>
+  <div class="CSS_Table_Example">
+    <table>
+      <tr>
+          <td>Nombre</td>
+          <td>Tipo</td>
+          <td>Descripcion</td>
+          <td>Precio</td>
+          <td>Estado</td>
+          <td>Acciones</td>
         </tr>
-      </thead>
-      <tbody>
-        <% @habitaciones.each do |habitacion| %>
-          <tr class="text-center">
-            <td><%= habitacion.numero %></td>
-            <td><%= habitacion.tipo_id %></td>
-            <td><%= habitacion.descripcion %></td>
-            <td><%= habitacion.precio %></td>
-            <td><%= habitacion.estado %></td>
-            <td>
+          <% @habitaciones.each do |habitacion| %>
+          <tr>
+            <td><center><%= habitacion.numero %></center></td>
+            <td><center><%= habitacion.tipo_id %></center></td>
+            <td><center><%= habitacion.descripcion %></center></td>
+            <td><center><%= habitacion.precio %></center></td>
+            <td><center><%= habitacion.estado %></center></td>
+            <td><center>
                 <%= link_to glyph(:eye_open), habitacion, class: 'btn btn-info btn-sm' %>
                 <%= link_to glyph(:pencil), edit_habitacion_path(habitacion), class: 'btn btn-warning btn-sm' %> 
                 <%= link_to glyph(:trash), habitacion, method: :delete, data: { confirm: 'Estas Seguro?' }, class: 'btn btn-danger btn-sm' %>
-            </td>
+            </center></td>
           </tr>
         <% end %>
-      </tbody>
     </table>
   </div>
   </div>
