--- a/EncarAlquiler/app/views/locatarios/edit.html.erb
+++ b/EncarAlquiler/app/views/locatarios/edit.html.erb
@@ -1,4 +1,2 @@
-<h1 class="text-center text-uppercase">Editar Locatario</h1>
+<h1 class="text-center text-uppercase">Editar Locatario  <%= link_to glyph(:arrow_left), locatarios_path, class: 'btn btn-info btn-sm' %></h1>
 <%= render 'form' %>
-<!--<%= link_to glyph(:arrow_left), locatarios_path, class: 'btn btn-primary btn-sm' %>-->
-
