--- a/EncarAlquiler/app/views/tipos/edit.html.erb
+++ b/EncarAlquiler/app/views/tipos/edit.html.erb
@@ -1,7 +1,3 @@
-<h1 class="text-center text-uppercase container">Editar tipo de habitacion</h1>
+<h1 class="text-center text-uppercase container">Editar tipo de habitacion
+	<%= link_to glyph(:arrow_left), tipos_path,  class: 'btn btn-info btn-sm' %></h1>
 <%= render 'form' %>
-<div class="col-md-4 col-md-offset-4">
-	<div class="actions">
-		
-	</div>
-</div>
