--- a/EncarAlquiler/app/views/tipos/index.html.erb
+++ b/EncarAlquiler/app/views/tipos/index.html.erb
@@ -6,30 +6,24 @@
     </th>
   </h1>
     <div class="col-md-6 col-md-offset-3">
-      <div class="table-responsive">
-        <table class="table table-bordered table-hover">
-          <thead>
-            <tr class="info">
-              <th class="text-center">Nombre</th>
-              <th class="text-center">Acciones</th>       
-              
+      <div class="CSS_Table_Example">
+        <table>
+            <tr>
+              <td>Nombre</td>
+              <td>Acciones</td>
             </tr>
-          </thead>
-
-          <tbody>
             <% @tipos.each do |tipo| %>
-              <tr class="text-center">
-                <td><%= tipo.nombre %></td>
-                <td>
-                  
+              <tr>
+                <td><center><%= tipo.nombre %></center></td>
+                <td> <center>
                 <%= link_to glyph(:eye_open), tipo, class: 'btn btn-info btn-sm' %>
                 <%= link_to glyph(:pencil), edit_tipo_path(tipo),  class: 'btn btn-warning btn-sm' %>
                 <%= link_to glyph(:trash), tipo, class: 'btn btn-danger btn-sm', method: :delete, data: { confirm: 'Esta seguro?' } %>
                
-                </td>
+                </center></td>
               </tr>
             <% end %>
-          </tbody>
+          
         </table>
       </div>
     </div>
