--- a/EncarAlquiler/app/views/reservas/_form.html.erb
+++ b/EncarAlquiler/app/views/reservas/_form.html.erb
@@ -53,9 +53,18 @@
             <div class="form-group col-lg-1">
                 <%= ff.remove_nested_fields_link glyph(:trash) , class: 'btn btn-danger btn-sm ', role: 'button', data: { confirm: 'Confirmar para eliminar este registro'} , hide_label: true %>
             </div>
+
+          <div class="form-group col-lg-2">
+            <% habitaciones_array = Habitacion.all.map { |habitacion| ["#{habitacion.precio }", habitacion.precio] } %>
+            <%= ff.select(:precio, options_for_select(habitaciones_array), { prompt: true}, {:class=>'form-control  input-sm select2', placeholder: 'Total', id: 'precio' }) %>
+        </div>
+
+        <!--
           <div class="form-group col-lg-2">
             <%= ff.number_field :precio, class: 'form-control input-sm', placeholder: 'Total', id: 'precio' %>
           </div>
+
+          -->
         <div class="input-daterange" data-provide="datepicker">
           <div class="form-group col-lg-3">
             <%= ff.text_field :fecha_inicio, class: 'form-control input-sm', placeholder: 'Fecha de inicio', id: 'fecha_inicio' %>
