correciones vistas pago locatarios y moledo reserva

--- a/EncarAlquiler/app/views/habitaciones/_form.html.erb
+++ b/EncarAlquiler/app/views/habitaciones/_form.html.erb
@@ -19,25 +19,14 @@
     <div class="CSS_Table_Example">
       <table>
           <tr>
-            <td>
-              <%= f.label :numero %>
-            </td>
-            <td>
-              <%= f.label :tipo_id %>
-            </td>
-            <td>
-              <%= f.label :descripcion %>
-            </d>
-            <td>
-              <%= f.label :precio %>
-            </td>
-            <td>
-              <%= f.label :estado %>
+            <td><%= f.label :numero %></td>
+            <td><%= f.label :tipo_id %></td>
+            <td><%= f.label :descripcion %></d>
+            <td><%= f.label :precio %></td>
+            <td><%= f.label :estado %>
             </td>
             <!--ACCIONES-->
-            <td>
-              Acciones
-            </td>
+            <td>Acciones</td>
           </tr>
             <tr>
               <td><center><%= f.text_field :numero, class:"form-control input-sm" %></center></td>
