--- a/EncarAlquiler/app/views/habitaciones/show.html.erb
+++ b/EncarAlquiler/app/views/habitaciones/show.html.erb
@@ -17,7 +17,7 @@
         </tr>
         <tr>
           <td><center><%= @habitacion.numero %></center></td>
-          <td><center><%= @habitacion.tipo_id %></center></td>
+          <td><center><%= @habitacion.tipo.nombre %></center></td>
           <td><center><%= @habitacion.descripcion %></center></td>
           <td><center><%= @habitacion.estado %></center></td>
           <td><center><%= @habitacion.precio %></center></td>
