--- a/EncarAlquiler/app/views/pagos/index.html.erb
+++ b/EncarAlquiler/app/views/pagos/index.html.erb
@@ -4,31 +4,23 @@
       <%= link_to  glyph(:plus), new_pago_path, class: 'btn btn-primary btn-sm' %>
   </h1>
   <div class="col-md-6 col-md-offset-3">
-    <div class="table-resposive">
-      <table class="table table-bordered table-hover">
-        <thead>
-          <tr class="info">
-            <th class="text-center">Reserva</th>
-            <th class="text-center">Montoapagar</th>
-            <th class="text-center">Acciones</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @pagos.each do |pago| %>
-          <tr class="text-center">
-            <td><%= pago.reserva_id %></td>
-            <td><%= pago.montoapagar %></td>
-            <td>
+    <div class="CSS_Table_Example">
+      <table>
+        <tr>
+            <td>Reserva</td>
+            <td>Monto</td>
+            <td>Acciones</td>
+          </tr><% @pagos.each do |pago| %>
+          <tr>
+            <td><center><%= pago.reserva_id%></center></td>
+            <td><center><%= pago.montoapagar %></center></td>
+            <td><center>
                 <%= link_to glyph(:eye_open), pago, class: 'btn btn-info btn-sm' %>
-                
-                
-                  <%= link_to glyph(:pencil), edit_pago_path(pago), class: 'btn btn-warning btn-sm' %> 
-                
-                  <%= link_to glyph(:trash), pago, method: :delete, data: { confirm: 'Estas seguro?' }, class: 'btn btn-danger btn-sm'  %>
-            </td>
+                <%= link_to glyph(:pencil), edit_pago_path(pago), class: 'btn btn-warning btn-sm' %>
+                <%= link_to glyph(:trash), pago, method: :delete, data: { confirm: 'Estas seguro?' }, class: 'btn btn-danger btn-sm' %>
+            </center></td>
           </tr>
           <% end %>
-        </tbody>
       </table>
     </div>
 </div>
