--- a/EncarAlquiler/app/views/pagos/show.html.erb
+++ b/EncarAlquiler/app/views/pagos/show.html.erb
@@ -1,29 +1,21 @@
 <h1 class="container text-center text-uppercase">
   Pago
-  <th>
-    <%= link_to glyph(:plus), new_pago_path, class: 'btn btn-primary btn-sm' %>
-  </th>
+    <%= link_to glyph(:arrow_left), pagos_path, class: 'btn btn-info btn-sm' %>
 </h1>
-<p id="notice"><%= notice %></p>
-
 <div class="col-md-6 col-md-offset-3">
-  <div class="table-responsive">
-    <table class="table table-bordered table-hover">
-      <thead>
-        <tr class="info">
-  			<th class="text-center">Reserva</th>
-  			<th class="text-center">Montoapagar:</th>
-  			<th class="text-center">Acciones</th>       
+  <div class="CSS_Table_Example">
+    <table>
+        <tr>
+  			<td>Reserva</td>
+  			<td>Montoapagar:</td>
+  			<td>Acciones</td>       
         </tr>
-      </thead>
-      <tbody>
-        <tr class="text-center">
-        	<td><%= @pago.reserva_id %></td>
-        	<td><%= @pago.montoapagar %></td>
-        	<td>
+        <tr>
+        	<td><center><%= @pago.reserva_id %></center></td>
+        	<td><center><%= @pago.montoapagar %></center></td>
+        	<td><center>
               <%= link_to glyph(:pencil), edit_pago_path(@pago), class: 'btn btn-warning btn-sm' %>
-           	  <%= link_to glyph(:arrow_left), pagos_path, class: 'btn btn-info btn-sm' %>
-          </td>
+          </center></td>
         </tr>
       </tbody>
     </table>    
