--- a/EncarAlquiler/app/views/pagos/show.html.erb
+++ b/EncarAlquiler/app/views/pagos/show.html.erb
@@ -1,6 +1,6 @@
 <h1 class="container text-center text-uppercase">
   Pago
-    <%= link_to glyph(:arrow_left), pagos_path, class: 'btn btn-info btn-sm' %>
+    <%= link_to  glyph(:plus), new_pago_path, class: 'btn btn-primary btn-sm' %>
 </h1>
 <div class="col-md-6 col-md-offset-3">
   <div class="CSS_Table_Example">
@@ -15,9 +15,9 @@
         	<td><center><%= @pago.montoapagar %></center></td>
         	<td><center>
               <%= link_to glyph(:pencil), edit_pago_path(@pago), class: 'btn btn-warning btn-sm' %>
+              <%= link_to glyph(:arrow_left), pagos_path,  class: 'btn btn-info btn-sm' %>
           </center></td>
         </tr>
-      </tbody>
     </table>    
   </div>
 </div>
