--- a/EncarAlquiler/app/views/layouts/paginas.html.erb
+++ b/EncarAlquiler/app/views/layouts/paginas.html.erb
@@ -19,7 +19,7 @@
 <!--/////////////////////////////////////////////////////////////////////////////////////////-->
 <header>
   
-  <nav class="navbar navbar-default navbar-static-top" role="navigation">
+  <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -28,18 +28,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <%= link_to ' EncarAlquiler ', '/principal', class:'btn btn-lg glyphicon glyphicon-home'%>
+          <%= link_to 'EncarAlquiler ', '/principal', class:'navbar-brand glyphicon glyphicon-home'%>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <% if usuario_signed_in? %>
             <ul class="nav navbar-nav">
-              <div class="">
-                <%= link_to ' Reservas', reservas_path, class:'btn btn-lg glyphicon glyphicon-calendar'%>
-                <%= link_to ' Locatarios', locatarios_path, class:'btn btn-lg glyphicon glyphicon-user'%>
-                <%= link_to ' Habitaciones', habitaciones_path, class:'btn btn-lg glyphicon glyphicon-tower'%>
-                <%= link_to ' Tipos', tipos_path, class:'btn btn-lg glyphicon glyphicon-bookmark'%>
-                <%= link_to ' Pagos', pagos_path, class:'btn btn-lg glyphicon glyphicon-credit-card'%>
-              </div>
+                <li><%= link_to ' Reservas', reservas_path, class:'glyphicon glyphicon-calendar'%></li>
+                <li><%= link_to ' Locatarios', locatarios_path, class:'glyphicon glyphicon-user'%></li>
+                <li><%= link_to ' Habitaciones', habitaciones_path, class:'glyphicon glyphicon-tower'%></li>
+                <li><%= link_to ' Tipos', tipos_path, class:'glyphicon glyphicon-bookmark'%></li>
+                <li><%= link_to ' Pagos', pagos_path, class:'glyphicon glyphicon-credit-card'%></li>
               <!--<li class="dropdown">
                 <a href="a" class="dropdown-toggle" data-hover="dropdown" data-toggle="dropdown">Administración <span class="caret"></span></a>
                 <ul class="dropdown-menu">
@@ -53,7 +51,7 @@
           <ul class="nav navbar-nav navbar-right">
             <% if usuario_signed_in? %>
             <li>
-            <%= link_to ' Salir', destroy_usuario_session_path, class:'btn-lg glyphicon glyphicon-log-out',  method: :delete%>
+            <%= link_to ' Salir', destroy_usuario_session_path, class:'glyphicon glyphicon-log-out',  method: :delete%>
             </li>
             <% end %>
           </ul>
