correcciones formularios y las vistas

--- a/EncarAlquiler/app/assets/stylesheets/twitter-bootstrap-static/bootstrap.css.erb
+++ b/EncarAlquiler/app/assets/stylesheets/twitter-bootstrap-static/bootstrap.css.erb
@@ -7044,3 +7044,7 @@ button.close {
 }.CSS_Table_Example tr:last-child td:last-child{
   border-width:0px 0px 0px 0px;
 }
+.mycss
+{
+font-weight:normal;font-variant:small-caps;color:#000000;letter-spacing:1pt;word-spacing:2pt;font-size:40px;text-align:left;font-family:arial, helvetica, sans-serif;line-height:1;
+}
