--- a/EncarAlquiler/app/views/locatarios/show.html.erb
+++ b/EncarAlquiler/app/views/locatarios/show.html.erb
@@ -23,7 +23,7 @@
                   <td><center><%= @locatario.email %></center></td>
                   <td><center>
                     <%= link_to glyph(:pencil), edit_locatario_path(@locatario), class: 'btn btn-warning btn-sm' %>
-                    <%= link_to glyph(:arrow_left), locatarios_path,  class: 'btn btn-info btn-sm' %>
+                    <%= link_to glyph(:arrow_left), locatarios_path,  class: 'btn btn-default btn-sm' %>
                   </center></td>
                 </tr>
     </table>
