--- a/EncarAlquiler/app/views/pagos/edit.html.erb
+++ b/EncarAlquiler/app/views/pagos/edit.html.erb
@@ -1,4 +1,7 @@
-<h1 class="text-center text-uppercase container">Editar Pago   <%= link_to glyph(:arrow_left), pagos_path, class: 'btn btn-info btn-sm' %></h1>
+<h1 class="text-center text-uppercase container">
+	Editar Pago 
+	<%= link_to glyph(:arrow_left), pagos_path, class: 'btn btn-default btn-sm' %>
+</h1>
 <%= render 'form' %>
 
 
