--- a/EncarAlquiler/app/views/pagos/new.html.erb
+++ b/EncarAlquiler/app/views/pagos/new.html.erb
@@ -1,6 +1,7 @@
 <div class="container col-md-12">
 	<h1 class="text-center text-uppercase">
-		Nuevo Pago   <%= link_to glyph(:arrow_left), pagos_path, class: 'btn btn-info btn-sm' %>
+		Nuevo Pago   
+		<%= link_to glyph(:arrow_left), pagos_path, class: 'btn btn-default btn-sm' %>
 	</h1>
 </div>
 <%= render 'form' %>
