--- a/EncarAlquiler/app/views/habitaciones/_form.html.erb
+++ b/EncarAlquiler/app/views/habitaciones/_form.html.erb
@@ -1,50 +1,63 @@
 <%= form_for(@habitacion) do |f| %>
 <div class="container">
-  <div class="col-md-12">
-  <% if @habitacion.errors.any? %>
-    <div  class="alert alert-dismissible alert-danger">
-      <button type="button" class="close" data-dismiss="alert">×</button>
-      <h2><%= pluralize(@habitacion.errors.count, "error") %> complete los datos antes de guardar:</h2>
-      <ul>
-      <% @habitacion.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+    <div class="col-md-12">
+        <% if @habitacion.errors.any? %>
+        <div  class="alert alert-dismissible alert-danger">
+            <button type="button" class="close" data-dismiss="alert">×</button>
+            <h2><%= pluralize(@habitacion.errors.count, "error") %> complete los datos antes de guardar:</h2>
+            <ul>
+                <% @habitacion.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+                <% end %>
+            </ul>
+        </div>
+        <% end %>
     </div>
-  <% end %>
-  </div>
-  </div>
-  <div class="container">
-  <div class="col-md-12">
-    <div class="CSS_Table_Example">
-      <table>
-          <tr>
-            <td><%= f.label :numero %></td>
-            <td><%= f.label :tipo_id %></td>
-            <td><%= f.label :descripcion %></d>
-            <td><%= f.label :precio %></td>
-            <td><%= f.label :estado %>
-            </td>
-            <!--ACCIONES-->
-            <td>Acciones</td>
-          </tr>
-            <tr>
-              <td><center><%= f.text_field :numero, class:"form-control input-sm" %></center></td>
-              <td><center><%= f.collection_select(:tipo_id, Tipo.all, :id, :nombre, { prompt: true}, {:class=>'form-control select2'}) %></center></td>
-              <td><center><%= f.text_field :descripcion, class:"form-control input-sm" %></center></td>
-              <td><center><%= f.text_field :precio, class:"form-control input-sm" %></center></td>
-              <td><center><%= f.text_field :estado, class:"form-control input-sm" %></center></td>
-
-              <!--BOTONES EN ACCIONES en new habitaciones-->
-              <td><center>
-                <%= button_tag(type: 'submit', class: "btn btn-success btn-sm") do %>
-                  <span class="glyphicon glyphicon-floppy-disk"></span>
-                  <% end %>
-                <%= link_to glyph(:remove), @habitacion, class: 'btn btn-danger btn-sm' %>
-              </center></td>
-            </tr>
-      </table>
+</div>
+<div class="container">
+    <div class="col-md-12">
+        <div class="CSS_Table_Example">
+            <table>
+                <tr>
+                    <td><%= f.label :numero %></td>
+                    <td><%= f.label :tipo_id %></td>
+                    <td><%= f.label :descripcion %></d>
+                    <td><%= f.label :precio %></td>
+                    <td><%= f.label :estado %>
+                    </td>
+                    <!--ACCIONES-->
+                    <td>Acciones</td>
+                </tr>
+                <tr>
+                    <td>
+                        <center><%= f.text_field :numero, class:"form-control input-sm" %></center>
+                    </td>
+                    <td>
+                        <center><%= f.collection_select(:tipo_id, Tipo.all, :id, :nombre, { prompt: true}, {:class=>'form-control select2'}) %></center>
+                    </td>
+                    <td>
+                        <center><%= f.text_field :descripcion, class:"form-control input-sm" %></center>
+                    </td>
+                    <td>
+                        <center><%= f.text_field :precio, class:"form-control input-sm" %></center>
+                    </td>
+                    <td>
+                        <center><%= f.text_field :estado, class:"form-control input-sm" %></center>
+                    </td>
+                    <!--BOTONES EN ACCIONES en new habitaciones-->
+                    <td>
+                        <center>
+                            <%= button_tag(type: 'submit', class: "btn btn-success btn-sm") do %>
+                            <span class="glyphicon glyphicon-floppy-disk"></span>
+                            <% end %>
+                            <button type="reset" class="btn btn-info btn-sm">
+                            <i class="glyphicon glyphicon-refresh"></i>
+                            </button>
+                        </center>
+                    </td>
+                </tr>
+            </table>
+        </div>
     </div>
-  </div>
-  </div>
+</div>
 <% end %>
