--- a/EncarAlquiler/app/views/habitaciones/edit.html.erb
+++ b/EncarAlquiler/app/views/habitaciones/edit.html.erb
@@ -1,4 +1,12 @@
-<h1 class="text-center text-uppercase">Editar Habitacion<%= link_to glyph(:arrow_left), habitaciones_path, class: 'btn btn-primary btn-sm' %>
-</h1>
+<div class="container">
+	<div class="row">
+		<div class="col-md-10 col-md-offset-1">
+			<h1 class="mycss">
+				Editar Habitacion
+				<%= link_to glyph(:arrow_left), habitaciones_path, class: 'btn btn-default btn-sm' %>
+			</h1>
+		</div>
+	</div>
+</div>
 <%= render 'form' %>
 
