--- a/EncarAlquiler/app/views/habitaciones/new.html.erb
+++ b/EncarAlquiler/app/views/habitaciones/new.html.erb
@@ -1,7 +1,11 @@
-<div class="col-md-12">
-	<h1 class="text-center text-uppercase">
-		Nueva Habitacion
-		<%= link_to glyph(:arrow_left), habitaciones_path, class: 'btn btn-info btn-sm text-left' %>
-	</h1>
+<div class="container">
+	<div class="row">
+		<div class="col-md-10 col-md-offset-1">
+			<h1 class="mycss">
+				Nueva Habitacion
+				<%= link_to glyph(:arrow_left), habitaciones_path, class: 'btn btn-default btn-sm text-left' %>
+			</h1>
+		</div>
+	</div>
 </div>
 <%= render 'form' %>
