--- a/EncarAlquiler/app/views/locatarios/_form.html.erb
+++ b/EncarAlquiler/app/views/locatarios/_form.html.erb
@@ -39,7 +39,9 @@
                <%= button_tag(type: 'submit', class: "btn btn-success btn-sm") do %>
                   <span class="glyphicon glyphicon-floppy-disk"></span>
                 <% end %>
-                <%= link_to glyph(:remove), @locatario, class: 'btn btn-danger btn-sm' %>
+                <button type="reset" class="btn btn-info btn-sm">
+                      <i class="glyphicon glyphicon-refresh"></i>
+                  </button>
             </center></td>
           </tr>
     </table>
