--- a/EncarAlquiler/app/views/locatarios/edit.html.erb
+++ b/EncarAlquiler/app/views/locatarios/edit.html.erb
@@ -1,2 +1,11 @@
-<h1 class="text-center text-uppercase">Editar Locatario  <%= link_to glyph(:arrow_left), locatarios_path, class: 'btn btn-info btn-sm' %></h1>
+<div class="container">
+	<div class="row">
+		<div class="col-md-10 col-md-offset-1">
+			<h1 class="mycss">
+				Editar Locatario
+				<%= link_to glyph(:arrow_left), locatarios_path, class: 'btn btn-default btn-sm' %>
+			</h1>
+		</div>
+	</div>
+</div>
 <%= render 'form' %>
