--- a/EncarAlquiler/app/views/locatarios/index.html.erb
+++ b/EncarAlquiler/app/views/locatarios/index.html.erb
@@ -1,8 +1,14 @@
 <div class="container">
-  <h1 class="text-center text-uppercase">
-    Locatarios
-      <%= link_to  glyph(:plus), new_locatario_path, class: 'btn btn-primary btn-sm' %>
-  </h1>
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
+      <h1 class="mycss">
+        Locatarios
+        <%= link_to  glyph(:plus), new_locatario_path, class: 'btn btn-primary btn-sm' %>
+      </h1>
+    </div>
+  </div>
+</div>
+<div class="col-md-10 col-md-offset-1">
   <div class="CSS_Table_Example">
       <table>
           <tr>
