--- a/EncarAlquiler/app/views/pagos/_form.html.erb
+++ b/EncarAlquiler/app/views/pagos/_form.html.erb
@@ -36,7 +36,9 @@
               <td><center><%= button_tag(type: 'submit', class: "btn btn-success btn-sm") do %>
                   <span class="glyphicon glyphicon-floppy-disk"></span>
                   <% end %>
-                  <%= link_to glyph(:remove), @pago, class: 'btn btn-danger btn-sm' %>
+                  <button type="reset" class="btn btn-info btn-sm">
+                      <i class="glyphicon glyphicon-refresh"></i>
+                  </button>
               </center></td>
             </tr>
         </table>
