--- a/EncarAlquiler/app/views/pagos/show.html.erb
+++ b/EncarAlquiler/app/views/pagos/show.html.erb
@@ -15,7 +15,7 @@
         	<td><center><%= @pago.montoapagar %></center></td>
         	<td><center>
               <%= link_to glyph(:pencil), edit_pago_path(@pago), class: 'btn btn-warning btn-sm' %>
-              <%= link_to glyph(:arrow_left), pagos_path,  class: 'btn btn-info btn-sm' %>
+              <%= link_to glyph(:arrow_left), pagos_path,  class: 'btn btn-default btn-sm' %>
           </center></td>
         </tr>
     </table>    
