--- a/EncarAlquiler/app/views/reservas/_form.html.erb
+++ b/EncarAlquiler/app/views/reservas/_form.html.erb
@@ -46,7 +46,7 @@
                       <i class="glyphicon glyphicon-refresh"></i>
                   </button>
 
-                  <%= link_to glyph(:arrow_left), reservas_path, class: 'btn btn-info btn-sm' %>
+                  <%= link_to glyph(:arrow_left), reservas_path, class: 'btn btn-default btn-sm' %>
             </div>
         </div>
     </div>
