--- a/EncarAlquiler/app/views/tipos/_form.html.erb
+++ b/EncarAlquiler/app/views/tipos/_form.html.erb
@@ -33,7 +33,9 @@
               <%= button_tag(type: 'submit', class: "btn btn-success btn-sm") do %>
               <span class="glyphicon glyphicon-floppy-disk"></span>
               <% end %>
-              <%= link_to glyph(:remove), @tipo,  class: 'btn btn-danger btn-sm' %>
+              <button type="reset" class="btn btn-info btn-sm">
+                      <i class="glyphicon glyphicon-refresh"></i>
+                  </button>
               </center>
             </td>
           </tr>
