--- a/EncarAlquiler/app/views/tipos/new.html.erb
+++ b/EncarAlquiler/app/views/tipos/new.html.erb
@@ -1,5 +1,7 @@
-<h1 class="text-center text-uppercase">Nuevo tipo de habitacion
-              <%= link_to glyph(:arrow_left), tipos_path,  class: 'btn btn-info btn-sm' %></h1>
+<h1 class="text-center text-uppercase">
+	Nuevo tipo de habitacion
+    <%= link_to glyph(:arrow_left), tipos_path,  class: 'btn btn-default btn-sm' %>
+</h1>
 <%= render 'form' %>
 
 
