--- a/EncarAlquiler/app/views/tipos/show.html.erb
+++ b/EncarAlquiler/app/views/tipos/show.html.erb
@@ -21,7 +21,7 @@
 	            </td></center>
 	            <td><center>
 	            	<%= link_to glyph(:pencil), edit_tipo_path(@tipo), class: 'btn btn-warning btn-sm' %>
-					<%= link_to glyph(:arrow_left), tipos_path,  class: 'btn btn-info btn-sm' %>
+					<%= link_to glyph(:arrow_left), tipos_path,  class: 'btn btn-default btn-sm' %>
 	            </center></td>
 	          </tr>
 	    </table>
