--- a/EncarAlquiler/app/views/reservas/_form.html.erb
+++ b/EncarAlquiler/app/views/reservas/_form.html.erb
@@ -15,27 +15,50 @@
             <% end %>
         </div>
     </div>
-    <div class="row well">
+    <div class="row">
         <div class="col-lg-12">
-            <div class="form-group col-lg-3">
+        <div class="CSS_Table_Example">
+        <table>
+        <tr>
+            <td>
                 <%= f.label :locatario_id %>
-                <%= f.collection_select(:locatario_id, Locatario.all, :id, :nombre,  { prompt: true}, {:class=>'form-control select2'}) %>
-            </div>
-            <div class="form-group col-lg-2" >
+                
+            </td>
+            <td>
                 <%= f.label :fecha_reserva %>
-                <%= f.text_field :fecha_reserva, class: 'form-control input-sm datepicker', placeholder: 'Fecha de reserva'  %>
-            </div>
-            <div class="form-group col-lg-2" >
+                
+            </td>
+            <td>
                 <%= f.label :monto %>
-                <%= f.text_field :monto, class: 'form-control input-sm', placeholder: 'Monto total'  %>
-            </div>
+            </td>
 
-            <div class="form-group col-lg-3" >
+            <td>
                 <%= f.label :estado %>
-                <%= f.select :estado, options_for_select([['Pediente' ,'Pendiente']]), { prompt: false}, {:class=>'form-control select2', value: 'Pendiente'} %>
-            </div>
+            </td>
 
-            <div class="form-group col-lg-2">
+            <td> Acciones</td>
+            </tr>
+
+            <tr>
+            <td>
+                
+                <%= f.collection_select(:locatario_id, Locatario.all, :id, :nombre,  { prompt: true}, {:class=>'form-control select2'}) %>
+            </td>
+            <td>
+                
+                <%= f.text_field :fecha_reserva, class: 'form-control input-sm datepicker', placeholder: 'Fecha de reserva'  %>
+            </td>
+            <td>
+                
+                <%= f.text_field :monto, class: 'form-control input-sm', placeholder: 'Monto total'  %>
+            </td>
+
+            <td>
+                
+                <%= f.select :estado, options_for_select([['Pediente' ,'Pendiente']]), { prompt: false}, {:class=>'form-control select2', value: 'Pendiente'} %>
+            </td>
+
+            <td>
                 <label class="col-lg-12 col-xs-12">&nbsp;</label>
                 <%= f.add_nested_fields_link :reservas_habitaciones, glyph(:plus), class: 'btn btn-primary btn-sm' %>
                 <%= button_tag(type: 'submit', class: "btn btn-success btn-sm") do %>
@@ -47,23 +70,27 @@
                   </button>
 
                   <%= link_to glyph(:arrow_left), reservas_path, class: 'btn btn-default btn-sm' %>
-            </div>
-        </div>
-    </div>
-    <%= f.nested_fields_for :reservas_habitaciones,  layout: :inline do |ff| %>
-    <div class="row">
-          <div class="form-group col-lg-3">
-            <% habitaciones_array = Habitacion.all.map { |habitacion| ["#{habitacion.numero} #{habitacion.descripcion} #{habitacion.precio } #{habitacion.estado} ", habitacion.id] } %>
-            <%= ff.select(:habitacion_id, options_for_select(habitaciones_array), { prompt: true}, {:class=>'form-control  input-sm select2', id: 'habitacion' }) %>
-        </div>
-            <div class="form-group col-lg-1">
-                <%= ff.remove_nested_fields_link glyph(:trash) , class: 'btn btn-danger btn-sm ', role: 'button', data: { confirm: 'Confirmar para eliminar este registro'} , hide_label: true %>
-            </div>
 
-          <div class="form-group col-lg-2">
+            </td>
+            </tr>
+        </table>
+        </div>
+    <%= f.nested_fields_for :reservas_habitaciones,  layout: :inline do |ff| %>
+
+        <div class="CSS_Table_Example">
+        <table>
+    <tr>
+    <td>
+        <% habitaciones_array = Habitacion.all.map { |habitacion| ["#{habitacion.numero} #{habitacion.descripcion} #{habitacion.precio } #{habitacion.estado} ", habitacion.id] } %>
+            <%= ff.select(:habitacion_id, options_for_select(habitaciones_array), { prompt: true}, {:class=>'form-control  input-sm select2', id: 'habitacion' }) %>
+    </td>
+            <td> 
+                <%= ff.remove_nested_fields_link glyph(:trash) , class: 'btn btn-danger btn-sm ', role: 'button', data: { confirm: 'Confirmar para eliminar este registro'} , hide_label: true %>
+            </td>
+        <td>
             <% habitaciones_array = Habitacion.all.map { |habitacion| ["#{habitacion.precio }", habitacion.precio] } %>
             <%= ff.select(:precio, options_for_select(habitaciones_array), { prompt: true}, {:class=>'form-control  input-sm select2', placeholder: 'Total', id: 'precio' }) %>
-        </div>
+        </td>
 
         <!--
           <div class="form-group col-lg-2">
@@ -71,15 +98,13 @@
           </div>
 
           -->
-        <div class="input-daterange" data-provide="datepicker">
-          <div class="form-group col-lg-3">
+          <td data-provide="datepicker" class="input-daterange">
             <%= ff.text_field :fecha_inicio, class: 'form-control input-sm', placeholder: 'Fecha de inicio', id: 'fecha_inicio' %>
-          </div>
-          <div class="form-group col-lg-3">
             <%= ff.text_field :fecha_fin, class: 'form-control input-sm ', placeholder: 'Fecha fin', id: 'fecha_fin' %>
-          </div>
+          </td>
+          </tr>
+          </table>
         </div>
-    </div>
     <% end %>
-</div>
 <% end %>
+</div>
