Vista de la tabla ver Reservas

--- a/EncarAlquiler/app/views/reservas/show.html.erb
+++ b/EncarAlquiler/app/views/reservas/show.html.erb
@@ -1,16 +1,20 @@
-<h1 class="text-center text-uppercase container">Reserva</h1>
-<div class="col-md-10 col-md-offset-1">
-  <div class="table-responsive">
-    <table class="table table-bordered table-hover">
+<div class="container">
+  <div class="row">
+    <div class="col-md-12 col-md-offset-1">
+      <h1 class="mycss">Reserva</h1>
+
+    <div class="col-md-12">
+        <div class="CSS_Table_Example">
+    <table>
             <thead>
               <tr class="info">
-              	<th class="text-center">Locatario</th>
-                <th class="text-center">Fecha de Reserva</th>
-                <th class="text-center">Monto</th>
-                <th class="text-center">Acciones</th>
+              	<td class="text-center">Locatario</th>
+                <td class="text-center">Fecha de Reserva</th>
+                <td class="text-center">Monto</th>
+                <td class="text-center">Acciones</th>
               </tr>
             </thead>
-            <tbody>
+            <tr>
                 <tr class="text-center">
                 	<td><%= @reserva.locatario_id %></td>
                   <td><%= @reserva.fecha_reserva %></td>
@@ -18,8 +22,10 @@
                   <td>
                     <%= link_to glyph(:pencil), edit_reserva_path(@reserva), class: 'btn btn-warning btn-sm' %>
                     <%= link_to glyph(:arrow_left), reservas_path, class: 'btn btn-info btn-sm' %>
-                </tr>
+                    </td>
+            </tr>
 			</tbody>
     </table>
   </div>
+</div>
 </div>
